# guitar-tone-shootout

./: .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  justfile  nginx.conf  worktree.py
.claude/: README.md  settings.json  settings.local.json  skill-rules.json
.claude/agents/: code-reviewer.md  documentation-writer.md  error-resolver.md  plan-reviewer.md
.claude/commands/: arch-review.md  check.md  dev-docs-update.md  dev-docs.md  resume.md  worktree-health.md  worktree-list.md  worktree-setup.md  worktree-teardown.md
.claude/hooks/: post-edit.sh  quality-check.sh  skill-activation.sh
.claude/rules/: github.md  security.md
.claude/skills/: testing.md  web-dev.md
.claude/skills/backend-dev/: SKILL.md
.claude/skills/docker-infra/: SKILL.md
.claude/skills/frontend-dev/: SKILL.md
.claude/skills/frontend-dev/resources/: tanstack-patterns.md
.claude/skills/pipeline-dev/: SKILL.md
.claude/skills/playwright/: SKILL.md
.claude/skills/skill-writer/: SKILL.md
.claude/skills/ui-design-system/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  task.yml
backend/: Dockerfile  Dockerfile.dev  alembic.ini  justfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20251226_184310_98715a25f8a8_create_users_table.py  20251226_210748_b462eaa59d41_change_tone3000_id_to_string.py  20251226_210941_04a411eef807_use_timezone_aware_timestamps.py  20251226_220057_d15efa732bff_add_jobs_table.py  20251227_011327_13162ba0b3f0_add_shootout_and_tone_selection_tables.py  20251227_120000_add_audio_metrics_and_reproducibility.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  health.py
backend/app/api/v1/: auth.py  files.py  jobs.py  metrics.py  router.py  shootouts.py  tones.py  ws.py
backend/app/core/: config.py  database.py  logging.py  redis.py  security.py
backend/app/models/: __init__.py  base.py  job.py  shootout.py  user.py
backend/app/schemas/: __init__.py  auth.py  job.py  shootout.py  tone3000.py
backend/app/services/: __init__.py  job_service.py  model_downloader.py  pipeline_service.py  shootout_service.py  tone3000.py
backend/app/tasks/: __init__.py  broker.py  health.py  shootout.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_jobs.py  test_model_downloader.py  test_pipeline_service.py  test_shootout.py  test_tasks.py  test_ws.py
cloudbeaver/: entrypoint.sh  initial-data-sources.conf
comparisons/: example.ini  mvp-test.ini
dev/: EXECUTION-PLAN.md  README.md  roadmap.md  session-state.md
dev/active/audio-analysis-reproducibility/: audio-analysis-reproducibility-context.md  audio-analysis-reproducibility-plan.md  audio-analysis-reproducibility-tasks.md
dev/active/cloudbeaver-integration/: plan.md
dev/active/pedalboard-migration/: context.md
dev/active/web-app-foundation/: web-app-foundation-context.md  web-app-foundation-plan.md  web-app-foundation-tasks.md
frontend/: Dockerfile  Dockerfile.dev  astro.config.mjs  eslint.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.mjs
frontend/src/components/: CTA.astro  Features.astro  Footer.astro  Header.astro  Hero.astro  SectionRow.astro  ShootoutCard.astro  ShootoutCard.tsx  UserNav.tsx
frontend/src/components/PipelineBuilder/: DITrackUpload.tsx  ToneCard.tsx  ToneSelector.tsx  index.tsx
frontend/src/components/SignalChain/: AmpBlock.tsx  BlockCard.tsx  CabinetBlock.tsx  ConnectionLine.tsx  DITrackBlock.tsx  EffectBlock.tsx  OutputMatrix.tsx  SignalChainBuilder.tsx  SortableBlock.tsx  SortableStageColumn.tsx  StageColumn.tsx  ToneSearchModal.tsx  index.ts  types.ts  useBuilderState.ts
frontend/src/layouts/: Layout.astro
frontend/src/lib/: api.ts  query.tsx
frontend/src/pages/: browse.astro  builder.astro  index.astro  login.astro  shootouts.astro
frontend/src/styles/: global.css
pipeline/: justfile  pyproject.toml
pipeline/src/guitar_tone_shootout/: __init__.py  audio.py  cli.py  config.py  evaluation.py  metadata.py  metrics.py  normalize.py  pipeline.py  preset.py  timestamps.py
pipeline/src/guitar_tone_shootout/adapters/: __init__.py  tone3000.py
pipeline/src/guitar_tone_shootout/domain/: __init__.py  models.py  ports.py
pipeline/tests/: __init__.py  conftest.py  test_audio.py  test_config.py  test_evaluation.py  test_metadata.py  test_metrics.py  test_normalize.py  test_pipeline.py  test_preset.py  test_timestamps.py  test_workflow.py
pipeline/tests/e2e/: __init__.py  test_comparison_workflow.py
pipeline/tests/fixtures/: generate_fixtures.py
pipeline/tests/fixtures/comparisons/: mvp-test.ini  test_comparison.ini
pipeline/tests/fixtures/inputs/: .gitignore
pipeline/tests/fixtures/inputs/nam_models/tone3000/jcm800-44269/: JCM800 capture 3.nam
pipeline/tests/integration/: __init__.py  test_audio_processing.py  test_pipeline_processing.py
scripts/: admin.sh  check-dev-docs.sh  convert-to-bare-repo.sh
templates/: comparison.html
web/: justfile  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
web/app/: __init__.py  main.py
web/static/src/: app.js  styles.css
web/templates/: base.html  index.html
worktree/: __init__.py  cli.py  config.py  docker.py  git_ops.py  health.py  pyproject.toml  registry.py  resources.py  templates.py  worktree.py
worktree/hooks/: post-commit
worktree/templates/: docker-compose.override.yml.j2  env.local.j2
(+19 files in other folders)
